Updated by task 'AutomatedMDTask_1674658290358_TM-MT_1674658294847'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/commerce-learn.en/commit/46bf0791dd8c98193adce4cf59ee0ad5907e6c8d

--- a/help/upgrade/2.4-upgrade-workshop.md
+++ b/help/upgrade/2.4-upgrade-workshop.md
@@ -8,9 +8,9 @@ role: Admin, Leader, Developer
 audience: all
 activity: use
 exl-id: fba4a08b-5633-433b-bf87-fa85457e4578
-source-git-commit: 42622b18e5738e8cb57f247029c189884698851a
+source-git-commit: e8d2631b31319701beb327f42fdf1372d9dad9b7
 workflow-type: tm+mt
-source-wordcount: '130'
+source-wordcount: '136'
 ht-degree: 0%
 
 ---
@@ -38,5 +38,5 @@ In deze workshop heeft Adobe Commerce met Merkle samengewerkt om:
 ## Aanvullende bronnen
 
 - [Upgradehandleiding](https://experienceleague.adobe.com/docs/commerce-operations/upgrade-guide/overview.html)
-- [Uitgebrachte versies](https://devdocs.magento.com/release/released-versions.html)
-- [Volgende releases](https://devdocs.magento.com/release/)
+- [Uitgebrachte versies](https://experienceleague.adobe.com/docs/commerce-operations/release/versions.html)
+- [Releaseplanning](https://experienceleague.adobe.com/docs/commerce-operations/release/planning/schedule.html)
