--- a/help/upgrade/2.4-upgrade-workshop.md
+++ b/help/upgrade/2.4-upgrade-workshop.md
@@ -2,13 +2,14 @@
 title: Workshop Adobe Commerce 2.4-upgrade
 description: Bekijk dit geregistreerde webinar om de verbeteringsstappen van Adobe Commerce en beste praktijken voor 2.4.4 of hoger te leren.
 landing-page-description: Bekijk deze geregistreerde webinar om over Adobe Commerce 2.4 verbeteringsstappen en beste praktijken te leren.
+short-description: Watch this recorded webinar to learn about Adobe Commerce 2.4 upgrade steps and best practices.
 kt: 9620
 doc-type: technical video
 role: Admin, Leader, Developer
 audience: all
 activity: use
 exl-id: fba4a08b-5633-433b-bf87-fa85457e4578
-source-git-commit: e8d2631b31319701beb327f42fdf1372d9dad9b7
+source-git-commit: 67d21ca23cdccc87cdeed4a08a3ebb48e5bd1030
 workflow-type: tm+mt
 source-wordcount: '136'
 ht-degree: 0%
