--- a/help/upgrade/2.4-upgrade-workshop.md
+++ b/help/upgrade/2.4-upgrade-workshop.md
@@ -2,7 +2,7 @@
 title: Workshop Adobe Commerce 2.4-upgrade
 description: Bekijk dit geregistreerde webinar om de verbeteringsstappen van Adobe Commerce en beste praktijken voor 2.4.4 of hoger te leren.
 landing-page-description: Bekijk deze geregistreerde webinar om over Adobe Commerce 2.4 verbeteringsstappen en beste praktijken te leren.
-short-description: Watch this recorded webinar to learn about Adobe Commerce 2.4 upgrade steps and best practices.
+short-description: Bekijk deze geregistreerde webinar om over Adobe Commerce 2.4 verbeteringsstappen en beste praktijken te leren.
 kt: 9620
 doc-type: technical video
 role: Admin, Leader, Developer
@@ -11,7 +11,7 @@ activity: use
 exl-id: fba4a08b-5633-433b-bf87-fa85457e4578
 source-git-commit: 67d21ca23cdccc87cdeed4a08a3ebb48e5bd1030
 workflow-type: tm+mt
-source-wordcount: '136'
+source-wordcount: '150'
 ht-degree: 0%
 
 ---
