Updated by task 'MD_MANUAL_HANDOFF_1692203189942_G11N-13385_TM-MT_1692203223791'

--- a/help/upgrade/2.4-upgrade-workshop.md
+++ b/help/upgrade/2.4-upgrade-workshop.md
@@ -1,8 +1,8 @@
 ---
 title: Workshop Adobe Commerce 2.4-upgrade
-description: Bekijk dit geregistreerde webinar om de verbeteringsstappen van Adobe Commerce en beste praktijken voor 2.4.4 of hoger te leren.
-landing-page-description: Bekijk deze geregistreerde webinar om over Adobe Commerce 2.4 verbeteringsstappen en beste praktijken te leren.
-short-description: Bekijk deze geregistreerde webinar om over Adobe Commerce 2.4 verbeteringsstappen en beste praktijken te leren.
+description: Bekijk deze opgenomen webinar voor meer informatie over Adobe Commerce-upgradestappen en best practices voor 2.4.4 of hoger.
+landing-page-description: Bekijk deze opgenomen webinar voor meer informatie over Adobe Commerce 2.4-upgradestappen en best practices.
+short-description: Bekijk deze opgenomen webinar voor meer informatie over Adobe Commerce 2.4-upgradestappen en best practices.
 kt: 9620
 doc-type: technical video
 audience: all
@@ -16,7 +16,7 @@ exl-id: fba4a08b-5633-433b-bf87-fa85457e4578
 source-git-commit: 404d2708a6d540d6fb19a33afb20726356cd8000
 workflow-type: tm+mt
 source-wordcount: '150'
-ht-degree: 0%
+ht-degree: 29%
 
 ---
 
@@ -24,7 +24,7 @@ ht-degree: 0%
 
 Bekijk dit geregistreerde webinar om de stappen en beste praktijken te leren om te volgen wanneer het voorbereidingen treffen voor uw volgende verbetering aan 2.4.4 of hoger.
 
-In deze workshop heeft Adobe Commerce met Merkle samengewerkt om:
+In deze workshop heeft Adobe Commerce met Merkle samengewerkt om het volgende te delen:
 
 - Technische stappen om uit te voeren bij de upgrade naar Adobe Commerce 2.4
 - Aanbevolen werkwijzen en gereedschappen bij upgrades
